refactored auth service